--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Woolara
 description: Luxuriously soft cashmere yarn from Inner Mongolia
-baseurl: "/Woolara"
-url: "https://li6834300.github.io"
+baseurl: ""
+url: "https://woolara.eu"
 
 # Build settings
 markdown: kramdown
